zetasql/parser/testdata/pipe_set_operation.test
select 1
|> union all (select 2)
--
QueryStatement [0-32] [select 1 |...(select 2)]
  Query [0-32] [select 1 |...(select 2)]
    Select [0-8] [select 1]
      SelectList [7-8] [1]
        SelectColumn [7-8] [1]
          IntLiteral(1) [7-8] [1]
    PipeSetOperation [9-32] [|> union all (select 2)]
      SetOperationMetadata [12-21] [union all]
        SetOperationType [12-17] [union]
        SetOperationAllOrDistinct [18-21] [all]
      Query [23-31] [select 2]
        Select [23-31] [select 2]
          SelectList [30-31] [2]
            SelectColumn [30-31] [2]
              IntLiteral(2) [30-31] [2]
--
SELECT
  1
|> UNION ALL
   (
   SELECT
     2
   )
==

# Hints, and multiple rhs tables.
select 1
|> union @{hint=1} all (select 2), (select 3)
--
QueryStatement [0-54] [select 1 |...(select 3)]
  Query [0-53] [select 1 |...(select 3]
    Select [0-8] [select 1]
      SelectList [7-8] [1]
        SelectColumn [7-8] [1]
          IntLiteral(1) [7-8] [1]
    PipeSetOperation [9-53] [|> union @...(select 3]
      SetOperationMetadata [12-31] [union @{hint=1} all]
        SetOperationType [12-17] [union]
        SetOperationAllOrDistinct [28-31] [all]
        Hint [18-27] [@{hint=1}]
          HintEntry [20-26] [hint=1]
            Identifier(hint) [20-24] [hint]
            IntLiteral(1) [25-26] [1]
      Query [33-41] [select 2]
        Select [33-41] [select 2]
          SelectList [40-41] [2]
            SelectColumn [40-41] [2]
              IntLiteral(2) [40-41] [2]
      Query [45-53] [select 3]
        Select [45-53] [select 3]
          SelectList [52-53] [3]
            SelectColumn [52-53] [3]
              IntLiteral(3) [52-53] [3]
--
SELECT
  1
|> UNION @{ hint = 1 } ALL
   (
   SELECT
     2
   ),
   (
   SELECT
     3
   )
==

# Complex queries on the rhs, with pipes or without.
select 1
|> union all
(select * from t where x),
(select 1 |> where y)
--
QueryStatement [0-70] [select 1 |...> where y)]
  Query [0-69] [select 1 |...|> where y]
    Select [0-8] [select 1]
      SelectList [7-8] [1]
        SelectColumn [7-8] [1]
          IntLiteral(1) [7-8] [1]
    PipeSetOperation [9-69] [|> union all...|> where y]
      SetOperationMetadata [12-21] [union all]
        SetOperationType [12-17] [union]
        SetOperationAllOrDistinct [18-21] [all]
      Query [23-46] [select * from t where x]
        Select [23-46] [select * from t where x]
          SelectList [30-31] [*]
            SelectColumn [30-31] [*]
              Star(*) [30-31] [*]
          FromClause [32-38] [from t]
            TablePathExpression [37-38] [t]
              PathExpression [37-38] [t]
                Identifier(t) [37-38] [t]
          WhereClause [39-46] [where x]
            PathExpression [45-46] [x]
              Identifier(x) [45-46] [x]
      Query [50-69] [select 1 |> where y]
        Select [50-58] [select 1]
          SelectList [57-58] [1]
            SelectColumn [57-58] [1]
              IntLiteral(1) [57-58] [1]
        PipeWhere [59-69] [|> where y]
          WhereClause [62-69] [where y]
            PathExpression [68-69] [y]
              Identifier(y) [68-69] [y]
--
SELECT
  1
|> UNION ALL
   (
   SELECT
     *
   FROM
     t
   WHERE
     x
   ),
   (
   SELECT
     1
   |> WHERE
        y)
==

select 1
|> union (select 2)
--
ERROR: Syntax error: Expected keyword ALL or keyword DISTINCT but got "(" [at 2:10]
|> union (select 2)
         ^
==

select 1
|> union all (select 2) union all (select 3)
--
ERROR: Syntax error: Expected end of input but got keyword UNION [at 2:25]
|> union all (select 2) union all (select 3)
                        ^
==

select 1
|> union all select 2
--
ERROR: Syntax error: Expected "(" but got keyword SELECT [at 2:14]
|> union all select 2
             ^
==

select 1
|> union all other_table
--
ERROR: Syntax error: Expected "(" but got identifier "other_table" [at 2:14]
|> union all other_table
             ^
==

# All combinations of simple set ops work as pipe operator keywords.
select 1
|> {{union|intersect|except}} {{all|distinct}} (select 2)
--
ALTERNATION GROUP: union,all
--
QueryStatement [0-32] [select 1 |...(select 2)]
  Query [0-32] [select 1 |...(select 2)]
    Select [0-8] [select 1]
      SelectList [7-8] [1]
        SelectColumn [7-8] [1]
          IntLiteral(1) [7-8] [1]
    PipeSetOperation [9-32] [|> union all (select 2)]
      SetOperationMetadata [12-21] [union all]
        SetOperationType [12-17] [union]
        SetOperationAllOrDistinct [18-21] [all]
      Query [23-31] [select 2]
        Select [23-31] [select 2]
          SelectList [30-31] [2]
            SelectColumn [30-31] [2]
              IntLiteral(2) [30-31] [2]
--
SELECT
  1
|> UNION ALL
   (
   SELECT
     2
   )
--
ALTERNATION GROUP: union,distinct
--
QueryStatement [0-37] [select 1 |...(select 2)]
  Query [0-37] [select 1 |...(select 2)]
    Select [0-8] [select 1]
      SelectList [7-8] [1]
        SelectColumn [7-8] [1]
          IntLiteral(1) [7-8] [1]
    PipeSetOperation [9-37] [|> union distinct (select 2)]
      SetOperationMetadata [12-26] [union distinct]
        SetOperationType [12-17] [union]
        SetOperationAllOrDistinct [18-26] [distinct]
      Query [28-36] [select 2]
        Select [28-36] [select 2]
          SelectList [35-36] [2]
            SelectColumn [35-36] [2]
              IntLiteral(2) [35-36] [2]
--
SELECT
  1
|> UNION DISTINCT
   (
   SELECT
     2
   )
--
ALTERNATION GROUP: intersect,all
--
QueryStatement [0-36] [select 1 |...(select 2)]
  Query [0-36] [select 1 |...(select 2)]
    Select [0-8] [select 1]
      SelectList [7-8] [1]
        SelectColumn [7-8] [1]
          IntLiteral(1) [7-8] [1]
    PipeSetOperation [9-36] [|> intersect all (select 2)]
      SetOperationMetadata [12-25] [intersect all]
        SetOperationType [12-21] [intersect]
        SetOperationAllOrDistinct [22-25] [all]
      Query [27-35] [select 2]
        Select [27-35] [select 2]
          SelectList [34-35] [2]
            SelectColumn [34-35] [2]
              IntLiteral(2) [34-35] [2]
--
SELECT
  1
|> INTERSECT ALL
   (
   SELECT
     2
   )
--
ALTERNATION GROUP: intersect,distinct
--
QueryStatement [0-41] [select 1 |...(select 2)]
  Query [0-41] [select 1 |...(select 2)]
    Select [0-8] [select 1]
      SelectList [7-8] [1]
        SelectColumn [7-8] [1]
          IntLiteral(1) [7-8] [1]
    PipeSetOperation [9-41] [|> intersect...(select 2)]
      SetOperationMetadata [12-30] [intersect distinct]
        SetOperationType [12-21] [intersect]
        SetOperationAllOrDistinct [22-30] [distinct]
      Query [32-40] [select 2]
        Select [32-40] [select 2]
          SelectList [39-40] [2]
            SelectColumn [39-40] [2]
              IntLiteral(2) [39-40] [2]
--
SELECT
  1
|> INTERSECT DISTINCT
   (
   SELECT
     2
   )
--
ALTERNATION GROUP: except,all
--
QueryStatement [0-33] [select 1 |...(select 2)]
  Query [0-33] [select 1 |...(select 2)]
    Select [0-8] [select 1]
      SelectList [7-8] [1]
        SelectColumn [7-8] [1]
          IntLiteral(1) [7-8] [1]
    PipeSetOperation [9-33] [|> except all (select 2)]
      SetOperationMetadata [12-22] [except all]
        SetOperationType [12-18] [except]
        SetOperationAllOrDistinct [19-22] [all]
      Query [24-32] [select 2]
        Select [24-32] [select 2]
          SelectList [31-32] [2]
            SelectColumn [31-32] [2]
              IntLiteral(2) [31-32] [2]
--
SELECT
  1
|> EXCEPT ALL
   (
   SELECT
     2
   )
--
ALTERNATION GROUP: except,distinct
--
QueryStatement [0-38] [select 1 |...(select 2)]
  Query [0-38] [select 1 |...(select 2)]
    Select [0-8] [select 1]
      SelectList [7-8] [1]
        SelectColumn [7-8] [1]
          IntLiteral(1) [7-8] [1]
    PipeSetOperation [9-38] [|> except distinct (select 2)]
      SetOperationMetadata [12-27] [except distinct]
        SetOperationType [12-18] [except]
        SetOperationAllOrDistinct [19-27] [distinct]
      Query [29-37] [select 2]
        Select [29-37] [select 2]
          SelectList [36-37] [2]
            SelectColumn [36-37] [2]
              IntLiteral(2) [36-37] [2]
--
SELECT
  1
|> EXCEPT DISTINCT
   (
   SELECT
     2
   )
==

# CORRESPONDING modifiers work.
select 1
|> UNION ALL CORRESPONDING (select 2)
|> INTERSECT DISTINCT CORRESPONDING BY (x) (select 3)
|> EXCEPT ALL STRICT CORRESPONDING BY (x) (select 4)
--
QueryStatement [0-153] [select 1 |...(select 4)]
  Query [0-153] [select 1 |...(select 4)]
    Select [0-8] [select 1]
      SelectList [7-8] [1]
        SelectColumn [7-8] [1]
          IntLiteral(1) [7-8] [1]
    PipeSetOperation [9-46] [|> UNION ALL...(select 2)]
      SetOperationMetadata [12-35] [UNION ALL CORRESPONDING]
        SetOperationType [12-17] [UNION]
        SetOperationAllOrDistinct [18-21] [ALL]
        SetOperationColumnMatchMode [22-35] [CORRESPONDING]
      Query [37-45] [select 2]
        Select [37-45] [select 2]
          SelectList [44-45] [2]
            SelectColumn [44-45] [2]
              IntLiteral(2) [44-45] [2]
    PipeSetOperation [47-100] [|> INTERSECT...(select 3)]
      SetOperationMetadata [50-89] [INTERSECT...RRESPONDING BY (x)]
        SetOperationType [50-59] [INTERSECT]
        SetOperationAllOrDistinct [60-68] [DISTINCT]
        SetOperationColumnMatchMode [69-85] [CORRESPONDING BY]
        ColumnList [86-89] [(x)]
          Identifier(x) [87-88] [x]
      Query [91-99] [select 3]
        Select [91-99] [select 3]
          SelectList [98-99] [3]
            SelectColumn [98-99] [3]
              IntLiteral(3) [98-99] [3]
    PipeSetOperation [101-153] [|> EXCEPT...(select 4)]
      SetOperationMetadata [104-142] [EXCEPT ALL...RESPONDING BY (x)]
        SetOperationType [104-110] [EXCEPT]
        SetOperationAllOrDistinct [111-114] [ALL]
        SetOperationColumnMatchMode [122-138] [CORRESPONDING BY]
        SetOperationColumnPropagationMode [115-121] [STRICT]
        ColumnList [139-142] [(x)]
          Identifier(x) [140-141] [x]
      Query [144-152] [select 4]
        Select [144-152] [select 4]
          SelectList [151-152] [4]
            SelectColumn [151-152] [4]
              IntLiteral(4) [151-152] [4]
--
SELECT
  1
|> UNION ALL CORRESPONDING
   (
   SELECT
     2
   )
|> INTERSECT DISTINCT CORRESPONDING BY (x)
   (
   SELECT
     3
   )
|> EXCEPT ALL STRICT CORRESPONDING BY (x)
   (
   SELECT
     4
   )
==

# FULL/LEFT modifiers work at the start of the pipe operator
select 1
|> {{FULL|FULL OUTER|LEFT|LEFT OUTER}} UNION ALL (select 2)
--
ALTERNATION GROUP: FULL
--
QueryStatement [0-37] [select 1 |...(select 2)]
  Query [0-37] [select 1 |...(select 2)]
    Select [0-8] [select 1]
      SelectList [7-8] [1]
        SelectColumn [7-8] [1]
          IntLiteral(1) [7-8] [1]
    PipeSetOperation [9-37] [|> FULL UNION ALL (select 2)]
      SetOperationMetadata [12-26] [FULL UNION ALL]
        SetOperationType [17-22] [UNION]
        SetOperationAllOrDistinct [23-26] [ALL]
        SetOperationColumnPropagationMode [12-16] [FULL]
      Query [28-36] [select 2]
        Select [28-36] [select 2]
          SelectList [35-36] [2]
            SelectColumn [35-36] [2]
              IntLiteral(2) [35-36] [2]
--
SELECT
  1
|> FULL UNION ALL
   (
   SELECT
     2
   )
--
ALTERNATION GROUP: FULL OUTER
--
QueryStatement [0-43] [select 1 |...(select 2)]
  Query [0-43] [select 1 |...(select 2)]
    Select [0-8] [select 1]
      SelectList [7-8] [1]
        SelectColumn [7-8] [1]
          IntLiteral(1) [7-8] [1]
    PipeSetOperation [9-43] [|> FULL OUTER...(select 2)]
      SetOperationMetadata [12-32] [FULL OUTER UNION ALL]
        SetOperationType [23-28] [UNION]
        SetOperationAllOrDistinct [29-32] [ALL]
        SetOperationColumnPropagationMode [12-22] [FULL OUTER]
      Query [34-42] [select 2]
        Select [34-42] [select 2]
          SelectList [41-42] [2]
            SelectColumn [41-42] [2]
              IntLiteral(2) [41-42] [2]
--
SELECT
  1
|> FULL UNION ALL
   (
   SELECT
     2
   )
--
ALTERNATION GROUP: LEFT
--
QueryStatement [0-37] [select 1 |...(select 2)]
  Query [0-37] [select 1 |...(select 2)]
    Select [0-8] [select 1]
      SelectList [7-8] [1]
        SelectColumn [7-8] [1]
          IntLiteral(1) [7-8] [1]
    PipeSetOperation [9-37] [|> LEFT UNION ALL (select 2)]
      SetOperationMetadata [12-26] [LEFT UNION ALL]
        SetOperationType [17-22] [UNION]
        SetOperationAllOrDistinct [23-26] [ALL]
        SetOperationColumnPropagationMode [12-16] [LEFT]
      Query [28-36] [select 2]
        Select [28-36] [select 2]
          SelectList [35-36] [2]
            SelectColumn [35-36] [2]
              IntLiteral(2) [35-36] [2]
--
SELECT
  1
|> LEFT UNION ALL
   (
   SELECT
     2
   )
--
ALTERNATION GROUP: LEFT OUTER
--
QueryStatement [0-43] [select 1 |...(select 2)]
  Query [0-43] [select 1 |...(select 2)]
    Select [0-8] [select 1]
      SelectList [7-8] [1]
        SelectColumn [7-8] [1]
          IntLiteral(1) [7-8] [1]
    PipeSetOperation [9-43] [|> LEFT OUTER...(select 2)]
      SetOperationMetadata [12-32] [LEFT OUTER UNION ALL]
        SetOperationType [23-28] [UNION]
        SetOperationAllOrDistinct [29-32] [ALL]
        SetOperationColumnPropagationMode [12-22] [LEFT OUTER]
      Query [34-42] [select 2]
        Select [34-42] [select 2]
          SelectList [41-42] [2]
            SelectColumn [41-42] [2]
              IntLiteral(2) [41-42] [2]
--
SELECT
  1
|> LEFT UNION ALL
   (
   SELECT
     2
   )
